force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__Contact__c.field-meta.xml
<CustomField>
    <fullName>npe5__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organization Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>