force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__Description__c.field-meta.xml
<CustomField>
    <fullName>npe5__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>