force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__Organization__c.field-meta.xml
<CustomField>
    <fullName>npe5__Organization__c</fullName>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Contacts</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>