force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__Primary__c.field-meta.xml
<CustomField>
    <fullName>npe5__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Affiliation&apos;s Organization will be stored on the Contact record.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>