force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__Role__c.field-meta.xml
<CustomField>
    <fullName>npe5__Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>