force-app/main/default/objects/npe5__Affiliation__c/fields/npe5__StartDate__c.field-meta.xml
<CustomField>
    <fullName>npe5__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>